# Eri

./: CMakeLists.txt  readme
Engine/: CMakeLists.txt
Engine/src/Eri/: App.cpp  App.h  Core.h
Engine/src/Eri/Platform/: EriPlatform.cpp  EriPlatform.h  IPlatform.h
Engine/src/Eri/Platform/Linux/: LinuxKeys.cpp  LinuxKeys.h  LinuxMouse.cpp  LinuxMouse.h  PlatformLinux.cpp  PlatformLinux.h
Engine/src/Eri/Platform/Windows/: PlatformWindows.cpp  PlatformWindows.h  WindowKeys.cpp  WindowKeys.h
Engine/src/Eri/Renderer/: IRenderer.h
Engine/src/Eri/Renderer/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
Engine/src/Eri/Utils/: EriUtils.cpp  EriUtils.h  IEvents.h  ILogger.h  IUtil.h
Engine/src/Eri/Utils/Events/KeyPress/: EventKeyPress.h  IKeyPressSubscriber.h
Engine/src/Eri/Utils/Events/Mouse/: EventMouse.h  IMouseSubscriber.h
Engine/src/Eri/Utils/Events/VectorEvents/: VectorEvents.cpp  VectorEvents.h
Engine/src/Eri/Utils/Events/WindowState/: EventWindowState.h  IWindowStateSubscriber.h
Engine/src/Eri/Utils/Logger/BasicLogger/: BasicLogger.cpp  BasicLogger.h
Engine/src/Eri/Utils/Logger/QuietLogger/: QuietLogger.cpp  QuietLogger.h
Game/: CMakeLists.txt
Game/src/: GameWorld.cpp  GameWorld.h
Notes/: EventSystem.notes  Factory.notes  Part2 chpt5.notes  PlatformLayer.notes  Pointer.notes  Refactor_01_nov.notes  Vulkan.notes
code/: CMakeLists.txt  build-all.bat  build-all.sh
code/app/: ISubsystems.h  app.h
code/app/Logger/: ILogger.h
code/app/Platform/: IPlatform.h
code/engine/: CMakeLists.txt  build.bat  build.sh
code/engine/src/: IGame.h  defines.h  entry.h  game_types.h  test.c  test.h
code/engine/src/Platform/: Platform.h  Platform_Linux.cpp  Platform_Windows.cpp
code/engine/src/core/: AppState.cpp  AppState.h  Application.cpp  Application.h  application.c  application.h  asserts.h  clock.c  clock.h  event.c  event.h  input.c  input.h  logger.c  logger.h  mem.c  mem.h  testing.cpp  testing.h
code/engine/src/core/DataStructs/: Strings.cpp  Strings.h
code/engine/src/core/Logger/: LogStream.cpp  LogStream.h  Logger.cpp  Logger.h
code/engine/src/core/Subsystems/: ISubsystem.h  Memory.cpp  Memory.h  Platform.h  Platform_Linux.cpp  Platform_Windows.cpp
code/engine/src/data_structs/: darray.c  darray.h
code/engine/src/platform/: platform.h  platform_linux.c  platform_win32.c
code/testbed/: CMakeLists.txt  build.bat  build.sh
code/testbed/src/: entry.c  entry.cpp  game.c  game.h  main.c  main.cpp  testGame.cpp  testGame.h
src/: CMakeLists.txt  main.cpp
src/Engine/src/: App.cpp  App.h  Core.h
src/Engine/src/Logger/: ILogger.h
src/Engine/src/Logger/BasicLogger/: BasicLogger.cpp  BasicLogger.h
src/Engine/src/Subsystems/: Factory.cpp  Factory.h  ISubsystems.h  SubsystemFactory.cpp  SubsystemFactory.h  Subsystems.h
src/Engine/src/Subsystems/EventSystem/: IEventSystem.h
src/Engine/src/Subsystems/EventSystem/Events/: EventInternal.h  EventKeyPress.h  EventMouse.h  Events.h
src/Engine/src/Subsystems/EventSystem/VectorEvents/: VectorEvents.cpp  VectorEvents.h
src/Engine/src/Subsystems/Events/: IEvents.h
src/Engine/src/Subsystems/Events/InternalEvents/: EventsInternal.h  IReceivePlatformPointersSubscriber.h  IReceiveVulkanStringSubscriber.h  IRequestPlatformPointersSubscriber.h  IRequestVulkanStringSubscriber.h
src/Engine/src/Subsystems/Events/KeyEvents/: EventKeyPress.h  IKeyEventSubscriber.h
src/Engine/src/Subsystems/Events/MouseEvents/: IMouseEventSubscriber.h
src/Engine/src/Subsystems/Events/VectorEvents/: VectorEvents.cpp  VectorEvents.h
src/Engine/src/Subsystems/Events/WindowEvents/: EventWindowState.h  IWindowStateSubscriber.h
src/Engine/src/Subsystems/Logger/: ILogger.h
src/Engine/src/Subsystems/Logger/BasicLogger/: BasicLogger.cpp  BasicLogger.h
src/Engine/src/Subsystems/Logger/QuietLogger/: QuietLogger.cpp  QuietLogger.h
src/Engine/src/Subsystems/Platform/: IPlatform.h
src/Engine/src/Subsystems/Platform/Windows/: PlatformWindows.cpp  PlatformWindows.h  WindowKeys.cpp  WindowKeys.h
src/Engine/src/Subsystems/Renderer/: IRenderer.h
src/Engine/src/Subsystems/Renderer/Vulkan/: VulkanRenderer.cpp  VulkanRenderer.h
src/Eri/: CMakeLists.txt  Eri.h
src/Eri/src/: App.cpp  App.h  Entry.h
src/Game/: CMakeLists.txt
src/Game/src/: GameWorld.cpp  GameWorld.h
src/Notes/: EventSystem.notes  Part2 chpt5.notes  PlatformLayer.notes  Vulkan.notes  using_Cmake.notes
story/: Pitch.notes  Prologue.notes
